--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.18",
+    "reactjs-human-body": "^0.0.3",
+    "styled-components": "^5.3.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
